# pyfarm

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/core/: config.py
src/pyfarm/: __init__.py  __main__.py  detector.py  weight.py
src/pyfarm/core/: config.py
src/pyfarm/utils/: helper_function.py
src/utils/: helper_function.py
test/: test_config.py
